[package]
name = "block-replayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ws", "rustls"]}
anvil = { git = "https://github.com/foundry-rs/foundry", version = "0.1.0" }
url = "2.4.0"
tracing = "0.1.37"
tokio = "1.28.2"
clap = "4.3.2"
